--- a/param.bib
+++ b/param.bib
@@ -1,44 +1,186 @@
-@Manual{Raadtools2022,
-  title = {raadtools: Tools for Synoptic Environmental Spatial Data},
-  author = {Michael D. Sumner},
-  year = {2022},
-  note = {R package version 0.6.0.9023},
-  url = {https://github.com/AustralianAntarcticDivision/raadtools},
+@article{Melvin2018,
+abstract = {Growth of Antarctic krill Euphausia superbaDana, 1850 is commonly calculated using the Instantaneous Growth Rate (IGR) method based on the difference between the uropod lengths of the moulted exoskeleton and the uropod lengths after moulting. To date, this method has not accounted for sex-dependent differences in body proportion, relying only upon uropod measurements. We measured the carapace, uropod, and total body lengths of gravid females, non-gravid females, males, and juvenile krill from the Indian Sector of the Southern Ocean. Growth rates derived using a combination of the carapace and uropod measurements for gravid females were different from those derived through the traditional uropod-only based IGR, whereas non-gravid females, male, and juvenile growth rates showed no significant difference between methods. The refined method we propose successfully reflects dimorphism in growth between the sexes of krill, with gravid females having enlarged carapaces during the reproductive season. The interaction between growth and reproduction must be considered to improve the reliability of predictions from krill life history models, which is possible through the use of sex-dependent IGR measurements. We propose that, whenever possible, measurements of carapace and total length should be made along with uropod measurements. Together with assessments of maturity stages of krill that did not moult during experiments, these measurements will aid in further informing krill stock assessments.},
+author = {Melvin, Jessica E. and Kawaguchi, So and King, Robert and Swadling, Kerrie M.},
+doi = {10.1093/jcbiol/ruy069},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/LH{\_}Parameters{\_}Krill/Melvinetal2018.pdf:pdf},
+issn = {1937240X},
+journal = {Journal of Crustacean Biology},
+keywords = {Instantaneous Growth Rate (IGR) method,Southern Ocean,gravid females,life history,sex dependent,sexual dimorphism},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {6},
+pages = {689--696},
+title = {{The carapace matters: Refinement of the instantaneous growth rate method for Antarctic krill Euphausia superba Dana, 1850 (Euphausiacea)}},
+volume = {38},
+year = {2018}
 }
-@unpublished{Dornam2021,
-author = {{WG-EMM-2021/05}},
-file = {:Users/mauriciomardones/DOCAS/Data/emm-2021-05r1.pdf:pdf},
-institution = {Commission for the Conservation of Antarctic Marine Living Resources (CCAMLR).},
-mendeley-groups = {DOCAS/Data Sea Ice},
-pages = {16},
-title = {{Results from the WG-ASAM intersessional e-group on Krill biomass estimates from acoustic surveys. WG-EMM-2021/05. WG-ASAM e-group on Krill biomass estimates from acoustic surveys.}},
+@article{Pakhomov1995a,
+abstract = {Data on the size and age composition of Antarctic krill (Euphausia superba Dana) were collected in the Cooperation and Cosmonaut Seas (Indian sector of the Southern Ocean) from 1985 to 1990. The estimation of the age-dependent annual extinction rate of krill [$\Theta$=1-exp(-M)] was obtained using the Zikov and Slepokurov (1982) approach and results were fitted by a parabolic equation. The coefficients of instantaneous natural mortality (M) of E. superba derived with this approach range from 0.52 during the maturation period, to 1.1-2.41 during the first and last years of life. {\textcopyright} 1995 Springer-Verlag.},
+author = {Pakhomov, E. A.},
+doi = {10.1007/BF00236127},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/LH{\_}Parameters{\_}Krill/Pakhomov93.pdf:pdf},
+issn = {07224060},
+journal = {Polar Biology},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {1},
+pages = {69--71},
+title = {{Natural age-dependent mortality rates of Antarctic krill Euphausia superba Dana in the Indian sector of the Southern Ocean}},
+volume = {15},
+year = {1995}
+}
+@article{Reid2010a,
+abstract = {The South Georgia region supports a large biomass of krill that is subject to high interannual variability. The apparent lack of a locally self-maintaining krill population at South Georgia means that understanding the mechanism underlying these observed population characteristics is essential to successful ecosystem-based management of krill fishery in the region. Krill acoustic-density data from surveys conducted in the early, middle and late period of the summers of 2001 to 2005, together with krill population size structure over the same period from predator diet data, were used with a krill population dynamics model to evaluate potential mechanisms behind the observed changes in krill biomass. Krill abundance was highest during the middle of the summer in 3 years and in the late period in 2 years; in the latter there was evidence that krill recruitment was delayed by several months. A model scenario that included empirically derived estimates of both the magnitude and timing of recruitment in each year showed the greatest correlation with the acoustic series. The results are consistent with a krill population with allochthonous recruitment entering a retained adult population; i.e. oceanic transport of adult krill does not appear to be the major factor determining the dynamics of the adult population. The results highlight the importance of the timing of recruitment, especially where this could introduce a mismatch between the peak of krill abundance and the peak demand from predators, which may exacerbate the effects of changes in krill populations arising from commercial harvesting and/or climate change. {\textcopyright} 2010 Inter-Research.},
+author = {Reid, Keith and Watkins, Jon L. and Murphy, Eugene J. and Trathan, Phil N. and Fielding, Sophie and Enderlein, Peter},
+doi = {10.3354/meps08356},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/LH{\_}Parameters{\_}Krill/Reidetal2010.pdf:pdf},
+issn = {01718630},
+journal = {Marine Ecology Progress Series},
+keywords = {Antarctic krill,Euphausia superba,Match-mismatch,Population dynamics,Recruitment,South Georgia},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {February 2016},
+pages = {243--252},
+title = {{Krill population dynamics at South Georgia: Implications for ecosystem-based fisheries management}},
+volume = {399},
+year = {2010}
+}
+@article{Siegel2000b,
+author = {Siegel, V},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/LH{\_}Parameters{\_}Krill/Siegel91.pdf:pdf},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {l},
+title = {{Production Rate in the Antarctic Peninsula Region}},
+year = {2000}
+}
+@article{Yu2021a,
+author = {Yu, Youjiao},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/LH{\_}Parameters{\_}Krill/Yu2021.pdf:pdf},
+keywords = {mixture models, EM algorithm, model selection},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+pages = {1--10},
+title = {{An Introduction to mixR}},
 year = {2021}
 }
-@article{Wrona2006,
-abstract = {Climate change is projected to cause significant alterations to aquatic biogeochemical processes, (including carbon dynamics), aquatic food web structure, dynamics and biodiversity, primary and secondary production; and, affect the range, distribution and habitat quality/quantity of aquatic mammals and waterfowl. Projected enhanced permafrost thawing is very likely to increase nutrient, sediment, and carbon loadings to aquatic systems, resulting in both positive and negative effects on freshwater chemistry. Nutrient and carbon enrichment will enhance nutrient cycling and productivity, and alter the generation and consumption of carbon-based trace gases. Consequently, the status of aquatic ecosystems as carbon sinks or sources is very likely to change. Climate change will also very likely affect the biodiversity of freshwater ecosystems across most of the Arctic. The magnitude, extent, and duration of the impacts and responses will be system- and location-dependent. Projected effects on aquatic mammals and waterfowl include altered migration routes and timing; a possible increase in the incidence of mortality and decreased growth and productivity from disease and/or parasites; and, probable changes in habitat suitability and timing of availability.},
-author = {Wrona, Frederick J. and Prowse, Terry D. and Reist, James D. and Hobbie, John E. and L{\'{e}}vesque, Lucie M.J. and Vincent, Warwick F.},
-doi = {10.1579/0044-7447(2006)35[359:CCEOAB]2.0.CO;2},
-file = {:Users/mauriciomardones/Library/Application Support/Mendeley Desktop/Downloaded/Wrona et al. - 2006 - Climate change effects on aquatic biota, ecosystem structure and function.pdf:pdf},
-issn = {00447447},
-journal = {Ambio},
-mendeley-groups = {DOCAS,DOCAS/Ensayo{\_}CC,DOCAS/Proyecto{\_}Tesis{\_}DOCAS},
-number = {7},
-pages = {359--369},
-pmid = {17256640},
-title = {{Climate change effects on aquatic biota, ecosystem structure and function}},
-volume = {35},
-year = {2006}
+@article{Scrucca2013,
+abstract = {Genetic algorithms (GAs) are stochastic search algorithms inspired by the basic principles of biological evolution and natural selection. GAs simulate the evolution of living organisms, where the fittest individuals dominate over the weaker ones, by mimicking the biological mechanisms of evolution, such as selection, crossover and mutation. GAs have been successfully applied to solve optimization problems, both for continuous (whether differentiable or not) and discrete functions. This paper describes the R package GA, a collection of general purpose functions that provide a flexible set of tools for applying a wide range of genetic algorithm methods. Several examples are discussed, ranging from mathematical functions in one and two dimensions known to be hard to optimize with standard derivative-based methods, to some selected statistical problems which require the optimization of user defined objective functions. (This paper contains animations that can be viewed using the Adobe Acrobat PDF viewer.).},
+author = {Scrucca, Luca},
+doi = {10.18637/jss.v053.i04},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/gaJSS.pdf:pdf},
+issn = {15487660},
+journal = {Journal of Statistical Software},
+keywords = {Evolutionary algorithms,Optimization,R},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {4},
+pages = {1--37},
+title = {{GA: A package for genetic algorithms in R}},
+volume = {53},
+year = {2013}
 }
-@article{Worm2012,
-author = {Worm, Boris and Hilborn, Ray and Baum, Julia K and Branch, Trevor A and Collie, Jeremy S and Costello, Christopher and Fogarty, Michael J and Fulton, Elizabeth A and Hutchings, Jeffrey A and Jennings, Simon and Jensen, Olaf P and Lotze, Heike K and Mace, Pamela M and Mcclanahan, Tim R},
-doi = {10.1126/science.1173146},
-file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}UCSC/B. Worm/Rebuilding global fisheries (2).pdf:pdf},
-mendeley-groups = {DOCAS/Ensayo{\_}CC,DOCAS/Proyecto{\_}Tesis{\_}DOCAS},
-number = {2009},
-title = {{Rebuilding Global Fisheries}},
-volume = {578},
-year = {2012}
+@book{Gayanilo2005,
+abstract = {The revised version of FiSAT (FiSAT II) is a program package consisting of methodologies for use with computers, enabling users to formulate some management options for fisheries, especially in data-sparse, tropical contexts. The FiSAT II was developed for computers running on Microsoft Windows{\textregistered} operating system. The new version utilizes the standard Windows graphic user interface. FiSAT II was developed mainly for the analysis of length-frequency data, but also enables related analyses, of size-at-age, catch-at-age, selection and other data typically collected for tropical fish stock assessment. This volume is complemented by "FiSAT - FAO-ICLARM stock assessment tools. Vol. 2: Reference manual" ISBN 92-5-104047-8.},
+author = {{F.C. Gayanilo}, Jr and Sparre, P. and Pauly, Daniel},
+booktitle = {Fisheries (Bethesda)},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/Gayanilo and Sparre and Pauly 2006.pdf:pdf},
+isbn = {9251053006},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+pages = {168},
+title = {{Stock assessment tools II}},
+url = {https://books.google.fr/books?hl=fr{\&}lr={\&}id=SqBJ2NutQ9AC{\&}oi=fnd{\&}pg=PR3{\&}dq=Gayanilo+FC,+{\&}ots=EEc5YuHNv9{\&}sig=Ng29n-nJLvjUcbeZ8acx5Ww6v5Q},
+year = {2005}
 }
+@article{Gayanilo1997,
+abstract = {This manual presents key concepts and methods found useful assessing the components of tropical and subtropical fish stocks, with emphasis on short- and medium-lived species of finfish and invertebrates (shrimps, squids, etc.) and on approaches based on the detailed analysis of length–frequency data. This account covers the preprocessing of length–frequency and ancillary data, growth estimation, mortality, gear selection, virtual population analysis and yield prediction. The manual is illustrated by means of computational examples, graphics and tabular printouts generated by the FiSAT software (FAO–ICLARM Stock Assessment Tools), and thus complements the FiSAT User's Manual.},
+author = {Gayanilo, Felimon C and Pauly, D},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/Gayanilo, Pauly - 1997 - FAO-ICLARM stock assessment tools Reference manual stock assessment tools Reference manual.pdf:pdf},
+isbn = {9251040478},
+journal = {FAO Computerized Information Series (Fisheries).No. 8},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {8},
+pages = {262},
+title = {{FAO-ICLARM Stock Assessment Tools (FiSAT) Reference Manual}},
+year = {1997}
+}
+@misc{Sparre1999,
+abstract = {There are two types of population growth function of the basic formulation of Schaefer's biology model, however in this study there is a difference in form and value of “r” as one of a biology parameter. In addition to the difference in the method by calculating the process of a and b coefficient. The calculating process of a and b coefficient in Schaefer's biology model was conducted through linear regression which has not yet been exact. This is due to the model itself which is quadratic. Therefore to provide the solution is through quadratic process. The linear regression shows the value of fmsy and Ymsy 1.40 and 1.34 times smaller than quadratic process respectively. Based on the two graphs from the calculating process of a and b coefficient, it can be concluded that the utilization of yellowfin tuna fishery was still not optimal. According to the result based on the linear and quadratic regression, the maximum production of yellowfin tuna can be increased to 664,037 and 877,340 kg.Keywords: Population growth function, Schaefer's Biology Model, Utilization status, Yellowfin tunaABSTRAKDua jenis fungsi pertumbuhan populasi menjadi dasar pembentukan model biologi Schaefer, namun dalam kajian ini terdapat perbedaan dalam bentuk dan nilai r sebagai parameter biologi ditambah juga berdasarkan perbedaan metode perhitungan koefisien a dan b. Metode perhitungan koefisien a dan b model biologi Schaefer melalui regresi linear masih kurang tepat, karena model biologi Schaefer berbentuk kuadratik, sehingga penyelesaiannya harus melalui proses kuadratik. Nilai fmsy dan Ymsy dari proses regresi linear memiliki nilai 1,40 dan 1,34 kali lebih rendah dari proses kuadratik. Berdasarkan kedua kurva dari kedua metode perhitungan koefisien a dan b, maka status pemanfaatan perikanan tuna madidihang diduga masih belum optimal. Sehingga berdasarkan proses regresi linear dan kuadratik, maka produksi maksimal tuna madidihang masih dapat ditingkatkan sampai dengan 664.037 dan 877.340 kg.Kata kunci: Fungsi pertumbuhan populasi, Model biologi Schaefer, Status pemanfaatan Tuna madidihang},
+author = {Sparre, P and Venema, SC},
+booktitle = {FAO Fisheries},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/Introduction to tropical fish stock assessment.pdf:pdf},
+issn = {2087-4235},
+keywords = {population growth function,s biology model,schaefer,utilization status,yellowfin tuna},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {1},
+pages = {65--75},
+title = {{Introduction to Tropical Fish Stock Assessment}},
+volume = {9},
+year = {1999}
+}
+@book{Pauly1987,
+abstract = {NO},
+author = {Pauly, D. and Morgan, GR R.},
+booktitle = {ICLARM Conference Proceedings},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/LengthBasedMethodsFisheriesResearch.pdf:pdf},
+isbn = {9711022281},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+pages = {468},
+title = {{Length-based methods in fisheries research}},
+volume = {13},
+year = {1987}
+}
+@article{Shah2013,
+abstract = {R is a language for statistical computing and graphics. The R environment provides a multitude of built-in functions in the “base” package, many of which are commonly required for elementary data analysis (e.g., linear modeling, graph plotting, basic statistics). However, the beauty of R lies in its almost infinite expandability and versatility. Approximately 2, 500 (and counting) packages have been developed for R by the active R community. These packages serve to augment R's natural capabilities in data analysis and often focus on developments in various scientific fields, as well as techniques used in highly specialized data analyses.},
+author = {Shah, Neil},
+doi = {10.1201/b15352-7},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/R{\_}introduction.pdf:pdf},
+isbn = {9781439860854},
+journal = {Practical Graph Mining with R},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+pages = {27--52},
+title = {{An Introduction to R}},
+volume = {3},
+year = {2013}
+}
+@techreport{Taylor2016,
+abstract = {11 Electronic LEngth Frequency ANalysis (ELEFAN) is a system of stock assessment methods based on 12 length-frequency (LFQ) data. One step is the estimation of growth from the progression of LFQ 13 modes through time using the von Bertalanffy growth function (VBGF). The option to fit a seasonally-14 oscillating von Bertalanffy growth function (soVBGF) requires a more intensive search due to two 15 additional parameters. This work describes an R-based implementation of the fitting procedure using 16 two new optimization approaches ('simulated annealing' and 'genetic algorithm'). The performance 17 of the genetic algorithm approach in soVBGF parameter estimation was evaluated against a 18 generated LFQ data set with known values. The results indicate that the optimization approach is 19 capable of finding high scoring solutions, yet initial settings regarding the initial restructuring process 20 for LFQ bin scoring (i.e. 'moving average', MA) and the fixing of the infinite length parameter (L∞) 21 both have significant effects on parameter estimation error. An outlook provides context on the 22 significance of the R-based implementation for further testing and development, and discusses its 23 future relevance for data-limited assessment. 24 25 Keywords 26 growth model, von Bertalanffy growth function, length-frequency data, ELEFAN, data-limited stock 27 assessment 28 Working Paper (v. 2016.12.05)},
+author = {Taylor, Marc H and Mildenberger, Tobias},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/Taylor{\_}Mildenberger{\_}Extending{\_}ELEFAN{\_}in{\_}R{\_}v20161205.pdf:pdf},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+title = {{Extending ELEFAN in R}},
+url = {https://cran.r-project.org},
+year = {2016}
+}
+@misc{Mildenberger2019,
+abstract = {A compilation of fish stock assessment methods for the analysis of length-frequency data in the context of data-poor fisheries. Includes methods and examples included in the FAO Manual by P. Sparre and S.C. Venema (1998), ``Introduction to tropical fish stock assessment'' ({\textless}http://www.fao.org/docrep/W5449E/W5449E00.htm{\textgreater}), as well as other more recent methods.},
+author = {Mildenberger, Tobias K and Taylor, Marc H and Wolff, Matthias},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/TropFishR (1).pdf:pdf},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+pages = {102},
+title = {{Tropical Fisheries Analysis - Package ‘ TropFishR '}},
+year = {2019}
+}
+@article{Mildenberger2017,
+abstract = {The R package TropFishR is a new analysis toolbox compiling single-species stock assessment methods specifically designed for data-limited fisheries analysis using length-frequency data. It includes methods for (i) estimating biological stock characteristics such as growth and mortality parameters, (ii) exploring technical aspects of the fisheries (e.g. exploitation rate and selectivity characteristics), (iii) assessing size and composition of a fish stock by means of virtual population analysis (VPA), and (iv) assessing stock status with yield prediction and production models. This paper introduces the package and demonstrates the functionality of a selection of its core methods. TropFishR modernises traditional stock assessment methods by easing application and development and by combining it with advanced statistical approaches.},
+author = {Mildenberger, Tobias Karl and Taylor, Marc Hollis and Wolff, Matthias},
+doi = {10.1111/2041-210X.12791},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/TropFishR{\_}figshare.pdf:pdf},
+issn = {2041210X},
+journal = {Methods in Ecology and Evolution},
+keywords = {ELEFAN,FiSAT II,data-poor,fish stock assessment,small-scale fisheries,tropics},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {11},
+pages = {1520--1527},
+title = {{TropFishR: an R package for fisheries analysis with length-frequency data}},
+volume = {8},
+year = {2017}
+}
+@article{Gubian2002,
+author = {Gubian, Sylvain and Suomela, Brian and Hoeng, Julia},
+file = {:Users/mauriciomardones/IFOP/Cursos{\_}Congresos/Curso TropFish{\_}SantaMarta{\_}2017/literature/Xiang et al. - 2013 - Generalized simulated annealing for global optimization the GenSA Package.pdf:pdf},
+journal = {The R Journal1},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+pages = {13--28},
+title = {{Generalized Simulated Annealing for Global Optimization: The GenSA Package}},
+volume = {5},
+year = {2002}
+}
+
 @article{Wang2021,
 abstract = {The Antarctic krill (Euphausia superba) fishery is the largest fishery in the Southern Ocean, and it has been operating for over 45 years. In the past decade, the spatial distribution of the krill fishery has focused on the Bransfield Strait off the Antarctic Peninsula (subarea 48.1). However, the high fishing effort and climate change have placed great pressure on krill resources in this region, and conservation concerns have been raised. Because aging krill is difficult and uncertain, we developed an integrated size-structured model to estimate the fishing mortality, recruitment and spawning biomass of krill. The results indicated that in 1992–2011, the average spawning biomass of krill ranged from 1.14 × 106 to 1.45 × 106 tons, the estimated biomass of the maximum sustainable yield (BMSY) ranged from 3.96 × 105 to 4.90 × 105 tons and the estimated average recruitment ranged from 2.3 × 1012 to 5.03 × 1012 individuals in the research area. We explored the effect of different data weighting schemes for the length data on the assessment output. However, our estimates also have uncertainties. In addition, an attempt was made to analyze the correlation between model-estimated recruitment and mature biomass with climate change. Future stock assessments of krill resources should be comprehensive and multimethod, and the management of krill resources should be based on science that considers the demand of fishing communities and ecosystem protection.},
 author = {Wang, Rui and Song, Puqing and Li, Yuan and Lin, Longshan},
@@ -63,13 +205,6 @@ school = {UNIVERSITY OF SOUTHAMPTON},
 title = {{Antarctic krill recruitment in the south-west Atlantic sector of the Southern Ocean}},
 year = {2020}
 }
-@Article{Report2023,
-    title = {Automated Results Reporting as a Practical Tool to Improve Reproducibility and Methodological Best Practices Adoption},
-    author = {Dominique Makowski and Mattan S. Ben-Shachar and Indrajeet Patil and Daniel Lüdecke},
-    year = {2021},
-    journal = {CRAN},
-    url = {https://github.com/easystats/report},
-  }
 @book{McCulloch2001,
 abstract = {A modern perspective on mixed models The availability of powerful computing methods in recent decades has thrust linear and nonlinear mixed models into the mainstream of statistical application. This volume offers a modern perspective on generalized, linear, and mixed models, presenting a unified and accessible treatment of the newest statistical methods for analyzing correlated, nonnormally distributed data. As a follow-up to Searle's classic, Linear Models, and Variance Components by Searle, Casella, and McCulloch, this new work progresses from the basic one-way classification to generalized linear mixed models. A variety of statistical methods are explained and illustrated, with an emphasis on maximum likelihood and restricted maximum likelihood. An invaluable resource for applied statisticians and industrial practitioners, as well as students interested in the latest results, Generalized, Linear, and Mixed Models features: A review of the basics of linear models and linear mixed models Descriptions of models for nonnormal data, including generalized linear and nonlinear models Analysis and illustration of techniques for a variety of real data sets Information on the accommodation of longitudinal data using these models Coverage of the prediction of realized values of random effects A discussion of the impact of computing issues on mixed models},
 author = {McCulloch, Charles E and Searle, Shayle R},
@@ -95,16 +230,6 @@ year = {2001}
     number = {60},
     pages = {3139},
     doi = {10.21105/joss.03139},
-  }
-@Article{Bates2015,
-    title = {Fitting Linear Mixed-Effects Models Using {lme4}},
-    author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
-    journal = {Journal of Statistical Software},
-    year = {2015},
-    volume = {67},
-    number = {1},
-    pages = {1--48},
-    doi = {10.18637/jss.v067.i01},
   }
 @article{Methot2013,
 abstract = {Stock synthesis (SS) is a statistical age-structured population modeling framework that has been applied in a wide variety of fish assessments globally. The framework is highly scalable from data-weak situations where it operates as an age-structured production model, to complex situations where it can flexibly incorporate multiple data sources and account for biological and environmental processes. SS implements compensatory population dynamics through use of a function relating mean recruitment to spawner reproductive output. This function enhances the ability of SS to operate in data-weak situations and enables it to estimate fishery management quantities such as fishing rates that would provide for maximum sustainable yield and to employ these rates in forecasts of potential yield and future stock status. Complex model configurations such as multiple areas and multiple growth morphs are possible, tag-recapture data can be used to aid estimation of movement rates among areas, and most parameters can change over time in response to environmental and ecosystem factors. SS is coded using Auto-Differentiation Model Builder, so inherits its powerful capability to efficiently estimate hundreds of parameters using either maximum likelihood or Bayesian inference. Output processing, principally through a package developed in R, enables rapid model diagnosis. Details of the underlying population dynamics and the statistical framework used within SS are provided. {\textcopyright} 2012.},
@@ -149,3 +274,74 @@ year = {2020}
     note = {R package version 0.2.0},
     url = {https://CRAN.R-project.org/package=mixR},
   }
+@article{McBride2021,
+abstract = { Antarctic krill Euphausia superba , a keystone species in the Southern Ocean, is highly relevant for studying effects of climate-related shifts on management systems. Krill provides a key link between primary producers and higher trophic levels and supports the largest regional fishery. Any major perturbation in the krill population would have severe ecological and economic ramifications. We review the literature to determine how climate change, in concert with other environmental changes, alters krill habitat, affects spatial distribution/abundance, and impacts fisheries management. Findings recently reported on the effects of climate change on krill distribution and abundance are inconsistent, however, raising questions regarding methods used to detect changes in density and biomass. One recent study reported a sharp decline in krill densities near their northern limit, accompanied by a poleward contraction in distribution in the Southwest Atlantic sector. Another recent study found no evidence of long-term decline in krill density or biomass and reported no evidence of a poleward shift in distribution. Moreover, with predicted decreases in phytoplankton production, vertical foraging migrations to the seabed may become more frequent, also impacting krill production and harvesting. Potentially cumulative impacts of climate change further compound the management challenge faced by CCAMLR, the organization responsible for conservation of Antarctic marine living resources: to detect changes in the abundance, distribution, and reproductive performance of krill and krill-dependent predator stocks and to respond to such change by adjusting its conservation measures. Based on CCAMLR reports and documents, we review the institutional framework, outline how climate change has been addressed within this organization, and examine the prospects for further advances toward ecosystem risk assessment and an adaptive management system. },
+author = {McBride, MM and {Schram Stokke}, O and Renner, AHH and Krafft, BA and Bergstad, OA and Biuw, M and Lowther, AD and Stiansen, JE},
+doi = {10.3354/meps13705},
+file = {:Users/mauriciomardones/REFERENCIAS/Review{\_}PhD/McBrideetal2021.pdf:pdf},
+issn = {0171-8630},
+journal = {Marine Ecology Progress Series},
+keywords = {abundance,antarctic krill,ccamlr,climate change,commission for the conservation,distribution,ecosystem,food web,management,of antarctic marine living,resources},
+mendeley-groups = {Essay{\_}I{\_}GeoSistema},
+pages = {185--214},
+title = {{Antarctic krill Euphausia superba: spatial distribution, abundance, and management of fisheries in a changing climate}},
+volume = {668},
+year = {2021}
+}
+@article{Atkinson2022,
+abstract = {Poleward range shifts are a global-scale response to warming, but these vary greatly among taxa and are hard to predict for individual species, localized regions or over shorter (years to decadal) timescales. Moving poleward might be easier in the Arctic than in the Southern Ocean, where evidence for range shifts is sparse and contradictory. Here, we compiled a database of larval Antarctic krill, Euphausia superba and, together with an adult database, it showed how their range shift is out of step with the pace of warming. During a 70-year period of rapid warming (1920s–1990s), distribution centres of both larvae and adults in the SW Atlantic sector remained fixed, despite warming by 0.5–1.0°C and losing sea ice. This was followed by a hiatus in surface warming and ice loss, yet during this period the distributions of krill life stages shifted greatly, by {\~{}}1000 km, to the south-west. Understanding the mechanism of such step changes is essential, since they herald system reorganizations that are hard to predict with current modelling approaches. We propose that the abrupt shift was driven by climatic controls acting on localized recruitment hotspots, superimposed on thermal niche conservatism. During the warming hiatus, the Southern Annular Mode index continued to become increasingly positive and, likely through reduced feeding success for larvae, this led to a precipitous decline in recruitment from the main reproduction hotspot along the southern Scotia Arc. This cut replenishment to the northern portion of the krill stock, as evidenced by declining density and swarm frequency. Concomitantly, a new, southern reproduction area developed after the 1990s, reinforcing the range shift despite the lack of surface warming. New spawning hotspots may provide the stepping stones needed for range shifts into polar regions, so planning of climate-ready marine protected areas should include these key areas of future habitat.},
+author = {Atkinson, Angus and Hill, Simeon L. and Reiss, Christian S. and Pakhomov, Evgeny A. and Beaugrand, Gregory and Tarling, Geraint A. and Yang, Guang and Steinberg, Deborah K. and Schmidt, Katrin and Edwards, Martin and Rombol{\'{a}}, Emilce and Perry, Frances A.},
+doi = {10.1111/gcb.16009},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/Cap{\_}1/Atkinsonetal2021.pdf:pdf},
+issn = {13652486},
+journal = {Global Change Biology},
+mendeley-groups = {DOCAS/Proyecto{\_}Tesis{\_}DOCAS},
+number = {4},
+pages = {1359--1375},
+pmid = {34921477},
+title = {{Stepping stones towards Antarctica: Switch to southern spawning grounds explains an abrupt range shift in krill}},
+volume = {28},
+year = {2022}
+}
+@unpublished{Dornam2021,
+author = {{WG-ASAM e-group on Krill biomass estimates from acoustic surveys.}},
+file = {:Users/mauriciomardones/DOCAS/Data/emm-2021-05r1.pdf:pdf},
+institution = {Commission for the Conservation of Antarctic Marine Living Resources (CCAMLR).},
+mendeley-groups = {DOCAS/Data Sea Ice},
+pages = {16},
+title = {{Results from the WG-ASAM intersessional e-group on Krill biomass estimates from acoustic surveys. WG-EMM-2021/05}},
+year = {2021}
+}
+@article{Perreault2021,
+abstract = {Stock assessment models often require an external estimate of the natural mortality rate (M) that is usually assumed to be the same for all ages and years in the model. Although the fixed M assumption can be a major oversimplification, model diagnostics (e.g. profile likelihoods) that can help provide an understanding of how the choice of M affects model fit are often not used in practice. In the state-space setting, model diagnostics are especially complicated because of the complex dependencies in the data caused by process errors. To get a better understanding of the effect of broad changes in M across all ages and years on the state-space model fit, we develop new methods that provide profile likelihoods for individual data sources (surveys, landings, age compositions) by decomposing the state-space integrated likelihood. We also use local influence diagnostics to assess the influence of age and year specific changes in M on model fit. We jointly call these methods M diagnostics and apply them to a case study for American plaice (Hippoglossoides platessoides) on the Grand Bank of Newfoundland. The M diagnostics indicate that most input data sources are fit better with a higher M in recent years. We suggest that M diagnostics should be routinely examined when formulating an assessment model.},
+author = {Perreault, Andrea M.J. and Cadigan, Noel G.},
+doi = {10.1016/j.fishres.2021.106062},
+file = {:Users/mauriciomardones/REFERENCIAS/Life{\_}history{\_}parameters/Mortalidad natural/Perreaultetal{\_}2021.pdf:pdf},
+issn = {01657836},
+journal = {Fisheries Research},
+keywords = {Local influence diagnostics,Model diagnostics,Natural mortality,Profile likelihood,State-space models},
+mendeley-groups = {Sea{\_}Urchin{\_}SA{\_}MS,DOCAS/LH{\_}Parameters},
+number = {June},
+pages = {106062},
+publisher = {Elsevier B.V.},
+title = {{Natural mortality diagnostics for state-space stock assessment models}},
+url = {https://doi.org/10.1016/j.fishres.2021.106062},
+volume = {243},
+year = {2021}
+}
+@article{Mannini2020,
+abstract = {The natural mortality rate (M) of a fish stock is typically highly influential on the outcome of age-structured stock assessment models, but at the same time extremely difficult to estimate. In data-limited stock assessments, M usually relies on a range of empirically or theoretically derived M estimates, which can vary vastly. This article aims at evaluating the impact of this variability in M using seven Mediterranean stocks as case studies of statistical catch-at-age assessments for information-limited fisheries. The two main bodies carrying out stock assessments in the Mediterranean and Black Seas are European Union's Scientific Technical Economic Committee for Fisheries (STECF) and Food and Agriculture Organization's General Fisheries Commission for the Mediterranean (GFCM). Current advice in terms of fishing mortality levels is based on a single “best” M assumption which is agreed by stock assessment expert working groups, but uncertainty about M is not taken into consideration. Our results demonstrate that not accounting for the uncertainty surrounding M during the assessment process can lead to strong underestimation or overestimation of fishing mortality, potentially biasing the management process. We recommend carrying out relevant sensitivity analyses to improve stock assessment and fisheries management in data-limited areas such as the Mediterranean basin.},
+author = {Mannini, Alessandro and Pinto, Cecilia and Konrad, Christoph and Vasilakopoulos, Paraskevas and Winker, Henning},
+doi = {10.3389/fmars.2020.585654},
+file = {:Users/mauriciomardones/REFERENCIAS/Life{\_}history{\_}parameters/Mortalidad natural/Elefan{\_}Room{\_}M{\_}SA{\_}2021.pdf:pdf},
+isbn = {0000000299},
+issn = {22967745},
+journal = {Frontiers in Marine Science},
+keywords = {Mediterranean Sea,data limited stocks,natural mortality,reference points,stock assessment,stock status advice},
+mendeley-groups = {Sea{\_}Urchin{\_}SA{\_}MS,DOCAS/LH{\_}Parameters},
+number = {December},
+pages = {1--13},
+title = {{“The Elephant in the Room”: Exploring Natural Mortality Uncertainty in Statistical Catch at Age Models}},
+volume = {7},
+year = {2020}
+}
